{
  "version": 4,
  "terraform_version": "1.0.10",
  "serial": 130,
  "lineage": "f24b3030-30be-e536-4472-0d4b202ebae7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat1_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0e31fd5ce3297a21d",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-52-17-251-74.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.17.251.74",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat1_eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:658523711927:internet-gateway/igw-05c42296311faff93",
            "id": "igw-05c42296311faff93",
            "owner_id": "658523711927",
            "tags": {
              "Name": "my_igw"
            },
            "vpc_id": "vpc-0712b1a2dbca634b4"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "my_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:658523711927:loadbalancer/app/my-lb/13981a52b74e5148",
            "arn_suffix": "app/my-lb/13981a52b74e5148",
            "dns_name": "my-lb-1203985895.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:658523711927:loadbalancer/app/my-lb/13981a52b74e5148",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-lb",
            "security_groups": [
              "sg-06e5f9b4715403953"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01e3236fc5d925214"
              },
              {
                "subnet_id": "subnet-07115318cfaa2804c"
              }
            ],
            "subnets": [
              "subnet-01e3236fc5d925214",
              "subnet-07115318cfaa2804c"
            ],
            "vpc_id": "vpc-0712b1a2dbca634b4",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.alb_public1",
            "aws_subnet.alb_public2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:658523711927:listener/app/my-lb/13981a52b74e5148/b272004a747196b6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:658523711927:targetgroup/my-target-group/7646660ce09e7f3d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:658523711927:listener/app/my-lb/13981a52b74e5148/b272004a747196b6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:658523711927:loadbalancer/app/my-lb/13981a52b74e5148",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.my_lb",
            "aws_lb_target_group.my_target_group",
            "aws_security_group.alb_sg",
            "aws_subnet.alb_public1",
            "aws_subnet.alb_public2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "my_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:658523711927:targetgroup/my-target-group/7646660ce09e7f3d",
            "arn_suffix": "targetgroup/my-target-group/7646660ce09e7f3d",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 7,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:658523711927:targetgroup/my-target-group/7646660ce09e7f3d",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "my-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0712b1a2dbca634b4"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "my_nat1_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e31fd5ce3297a21d",
            "id": "nat-0980f392c3aa320b2",
            "network_interface_id": "eni-035a8bde985c9da35",
            "private_ip": "10.0.0.14",
            "public_ip": "52.17.251.74",
            "subnet_id": "subnet-01e3236fc5d925214",
            "tags": {
              "Name": "my_nat1_gw"
            }
          },
          "dependencies": [
            "aws_eip.nat1_eip",
            "aws_internet_gateway.my_igw",
            "aws_subnet.alb_public1",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_web_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02a06985ae8bb68ee",
            "owner_id": "658523711927",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0980f392c3aa320b2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_web_table"
            },
            "vpc_id": "vpc-0712b1a2dbca634b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat1_eip",
            "aws_internet_gateway.my_igw",
            "aws_nat_gateway.my_nat1_gw",
            "aws_subnet.alb_public1",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a3ebdf44cc21be22",
            "owner_id": "658523711927",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05c42296311faff93",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_table"
            },
            "vpc_id": "vpc-0712b1a2dbca634b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0542d0f84349646e4",
            "route_table_id": "rtb-0a3ebdf44cc21be22",
            "subnet_id": "subnet-01e3236fc5d925214"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.public_table",
            "aws_subnet.alb_public1",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9e851a63e37d32b",
            "route_table_id": "rtb-0a3ebdf44cc21be22",
            "subnet_id": "subnet-07115318cfaa2804c"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.public_table",
            "aws_subnet.alb_public2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-023a1bb75cc402d80",
            "route_table_id": "rtb-02a06985ae8bb68ee",
            "subnet_id": "subnet-05c2e4d35d0f88fed"
          },
          "dependencies": [
            "aws_eip.nat1_eip",
            "aws_internet_gateway.my_igw",
            "aws_nat_gateway.my_nat1_gw",
            "aws_route_table.private_web_table",
            "aws_subnet.alb_public1",
            "aws_subnet.web_private",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:658523711927:security-group/sg-06e5f9b4715403953",
            "description": "SG rules for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-06e5f9b4715403953",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb_sg",
            "name_prefix": "",
            "owner_id": "658523711927",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0712b1a2dbca634b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:658523711927:security-group/sg-05eb5712c5b644937",
            "description": "SG rules for hosts in web subnets",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-05eb5712c5b644937",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web_sg",
            "name_prefix": "",
            "owner_id": "658523711927",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0712b1a2dbca634b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "alb_public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:658523711927:subnet/subnet-01e3236fc5d925214",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.0.0/28",
            "id": "subnet-01e3236fc5d925214",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "658523711927",
            "tags": {
              "Name": "alb_public1"
            },
            "tags_all": {
              "Name": "alb_public1"
            },
            "vpc_id": "vpc-0712b1a2dbca634b4"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "alb_public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:658523711927:subnet/subnet-07115318cfaa2804c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.0.16/28",
            "id": "subnet-07115318cfaa2804c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "658523711927",
            "tags": {
              "Name": "alb_public2"
            },
            "tags_all": {
              "Name": "alb_public2"
            },
            "vpc_id": "vpc-0712b1a2dbca634b4"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:658523711927:subnet/subnet-05c2e4d35d0f88fed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.0.32/28",
            "id": "subnet-05c2e4d35d0f88fed",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "658523711927",
            "tags": {
              "Name": "web_private"
            },
            "tags_all": {
              "Name": "web_private"
            },
            "vpc_id": "vpc-0712b1a2dbca634b4"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:658523711927:vpc/vpc-0712b1a2dbca634b4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/26",
            "default_network_acl_id": "acl-0bb48f1761fc77a79",
            "default_route_table_id": "rtb-0d599919353fc02a5",
            "default_security_group_id": "sg-086f78da1a263ce2e",
            "dhcp_options_id": "dopt-08c4e4b65491d39ca",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0712b1a2dbca634b4",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d599919353fc02a5",
            "owner_id": "658523711927",
            "tags": {
              "Name": "my_vpc"
            },
            "tags_all": {
              "Name": "my_vpc"
            }
          }
        }
      ]
    }
  ]
}